[gd_scene load_steps=2 format=3 uid="uid://djvv02f1regjv"]

[ext_resource type="Script" path="res://scripts/opponent_editor.gd" id="1_kw6gn"]

[node name="opp1" type="HBoxContainer"]
script = ExtResource("1_kw6gn")
index = 1
team = 1

[node name="flavor_label" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "P1 "
horizontal_alignment = 1

[node name="name_label" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(355, 96)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="nature" type="OptionButton" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 64
item_count = 3
selected = 0
popup/item_0/text = "Computer"
popup/item_0/id = 0
popup/item_1/text = "Local"
popup/item_1/id = 1
popup/item_2/text = "None"
popup/item_2/id = 2

[node name="team" type="OptionButton" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 64
item_count = 8
selected = 1
popup/item_0/text = "A"
popup/item_0/id = 0
popup/item_1/text = "B"
popup/item_1/id = 1
popup/item_2/text = "C"
popup/item_2/id = 2
popup/item_3/text = "D"
popup/item_3/id = 3
popup/item_4/text = "E"
popup/item_4/id = 4
popup/item_5/text = "F"
popup/item_5/id = 5
popup/item_6/text = "G"
popup/item_6/id = 6
popup/item_7/text = "H"
popup/item_7/id = 7

[connection signal="item_selected" from="nature" to="." method="_on_nature_item_selected"]
